--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Arquivos de cache do Terraform
+.terraform/
+terraform.tfstate
+terraform.tfstate.backup
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
